Fixed modals not being consistent across light and dark mode.

--- a/theme/static_src/src/style.css
+++ b/theme/static_src/src/style.css
@@ -34,26 +34,19 @@
 }
 
 @layer base {
+  /* Inputs inside modals */
   input,
   textarea,
   select {
     background-color: var(--ember-neutral) !important;
-    color: #fff !important;
-    border-color: var(--ember-accent) !important;
+    border-color: var(--ember-highlight) !important;
+    color: white;
   }
 
   input::placeholder,
   textarea::placeholder {
     color: var(--ember-base) !important;
-    opacity: 0.1;
-  }
-
-  [data-theme="light"] input[type="number"] {
-    color: #fff !important;
-  }
-
-  [data-theme="light"] input[type="number"] {
-    color: #fff !important;
+    opacity: 0.6;
   }
 }
 
